# synergy_plasticity_pid

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
scripts/: create_figures.py  generate_pid.py  generate_surrogates.py  infotheory_test.py  significance_testing.py
src/: pid.py  plots.py  sig_test.py  util.py
