[tool.poetry]
name = "synergy-plasticity-pid"
version = "0.1.0"
description = ""
authors = ["jcussen <joecussen96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pre-commit = "^3.3.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
